Creado mediante Colaboratory

--- a/string_pyratilla.ipynb
+++ b/string_pyratilla.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "string pyratilla.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPdZgWSoK6yn2s7JsNjYFJw",
+      "authorship_tag": "ABX9TyPY2BfDI/Hyi8yMfeJuPtpq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         },
         "outputId": "db203144-2200-4f46-b900-9f889bc09db8"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,13 +73,42 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "s = \"Formulario\"\n",
+        "print(s.upper())\n",
+        "print(\"introduce tu nombre\")\n",
+        "name = input()\n",
+        "print(\"introduce tu edad\")\n",
+        "age = int(input())\n",
+        "print(\"introduce tu hobby\")\n",
+        "hobby = input()\n",
+        "print(\"introduce tu sueño\")\n",
+        "dream = input()"
       ],
       "metadata": {
-        "id": "Gb2v-bMtlSRD"
+        "id": "Gb2v-bMtlSRD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9441420d-c8f5-462f-fe1c-845b0f1db5cb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "FORMULARIO\n",
+            "introduce tu nombre\n",
+            "miko\n",
+            "introduce tu edad\n",
+            "30\n",
+            "introduce tu hobby\n",
+            "cantar\n",
+            "introduce tu sueño\n",
+            "navegar\n"
+          ]
+        }
+      ]
     }
   ]
 }
